{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 38,
  "lineage": "aa00d737-31be-b7c7-fa53-bf988bbb2c80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:security-group/sg-0a0dc0c2e7b623c40",
            "description": "Security group with no ingress rule",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0dc0c2e7b623c40",
            "ingress": [],
            "name": "no-ingress-sg",
            "name_prefix": "",
            "owner_id": "727646508878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:network-acl/acl-0d7774e0d163c8b84",
            "default_network_acl_id": "acl-0d7774e0d163c8b84",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d7774e0d163c8b84",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "727646508878",
            "subnet_ids": [
              "subnet-0d521df9b20ee0065",
              "subnet-0e531b55c5d799426"
            ],
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:route-table/rtb-0b1967ce5d000c8b7",
            "default_route_table_id": "rtb-0b1967ce5d000c8b7",
            "id": "rtb-0b1967ce5d000c8b7",
            "owner_id": "727646508878",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:security-group/sg-048ef051e14b539a7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-048ef051e14b539a7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "727646508878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-default"
            },
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:internet-gateway/igw-03786afa2c5809983",
            "id": "igw-03786afa2c5809983",
            "owner_id": "727646508878",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev"
            },
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03786afa2c5809983",
            "id": "r-rtb-02a23df11ab15c2aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a23df11ab15c2aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.this",
            "module.main.aws_route_table.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:route-table/rtb-02a23df11ab15c2aa",
            "id": "rtb-02a23df11ab15c2aa",
            "owner_id": "727646508878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03786afa2c5809983",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-public"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dcc4e285b05d7ff",
            "route_table_id": "rtb-02a23df11ab15c2aa",
            "subnet_id": "subnet-0e531b55c5d799426"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0507d7efed34336f6",
            "route_table_id": "rtb-02a23df11ab15c2aa",
            "subnet_id": "subnet-0d521df9b20ee0065"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_route_table.public",
            "module.main.aws_subnet.public",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:subnet/subnet-0e531b55c5d799426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.42.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e531b55c5d799426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646508878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-public-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-public-1"
            },
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:subnet/subnet-0d521df9b20ee0065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.42.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d521df9b20ee0065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646508878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev-public-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev-public-2"
            },
            "vpc_id": "vpc-05824d98d2e528751"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main.aws_vpc.this",
            "module.main.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727646508878:vpc/vpc-05824d98d2e528751",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0d7774e0d163c8b84",
            "default_route_table_id": "rtb-0b1967ce5d000c8b7",
            "default_security_group_id": "sg-048ef051e14b539a7",
            "dhcp_options_id": "dopt-00a79b6a968d0b279",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05824d98d2e528751",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1967ce5d000c8b7",
            "owner_id": "727646508878",
            "tags": {
              "Environment": "development",
              "Name": "globo-dev"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "globo-dev"
            }
          }
        }
      ]
    }
  ]
}